prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-blog
  namespace: blog
spec:
  selector:
    app: hugo-blog
  ports:
    - protocol: TCP
      port: 8084 # Exposed port
      targetPort: 1313 # Port the container listens on
  type: ClusterIP
